--- a/IST322/landingpagecopy.html
+++ b/IST322/landingpagecopy.html
@@ -6,6 +6,77 @@
   <meta name="author" content="Your Name">
   <title>Bundles & Deals - PlayStationMe.com</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+    main {
+      padding: 20px;
+      text-align: left;
+    }
+    section {
+      padding-bottom: 50px;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+    .ps5-details {
+      margin-top: 20px;
+    }
+    .ps5-details h3 {
+      margin-bottom: 10px;
+    }
+    .ps5-details p {
+      margin-bottom: 20px;
+    }
+    .ps5-details button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+      font-size: 16px;
+      display: block;
+      margin: 0 auto;
+    }
+    .ps5-details button:hover {
+      background-color: #0056b3;
+    }
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -14,23 +85,29 @@
       <ul>
         <li><a href="playstationmecopy.html">Home</a></li>
         <li><a href="Aboutcopy.html">About</a></li>
-        <li><a href="landingpagecopy.html">Bundles & Deals</a></li> <!-- Fixed the href attribute -->
-        <li><a href="Contactcopy.html">Contact</a></li>
+        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
+        <li><a href="Contact.copy.html">Support</a></li>
+        <li><a href="checkout.html" class="checkout-button"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
       <h2>Bundles & Deals at PlayStationMe.com</h2>
-      <p>Welcome to PlayStationMe.com, your ultimate destination for finding the best deals on Sony PS5 consoles, bundles, and accessories. Our mission is to provide gamers with access to top-quality products at unbeatable prices. With a passion for gaming and a commitment to customer satisfaction, we strive to make your shopping experience enjoyable and rewarding.</p>
-      <h2>Featured PS5 Deal:</h2>
+      <p>Shop PlaystationMe.com to find the latest greatest deal Limitted Time Offer!</p>
+      <h2>Featured Deals</h2>
       <div class="ps5-listing">
-        <img src="../images/ps5.jpg" alt="Sony PlayStation 5" width="500">
+        <img src="../images/bundles.jpg" alt="Sony PlayStation 5" width="500">
         <div class="ps5-details">
           <h3>PS5 Console</h3>
           <p>Experience next-gen gaming with the powerful PS5 console. Get it now at the best price!</p>
-          <button>Buy Now - $450.00</button>
-      
-
-
-     
+          <button>Buy Now - $749.99</button>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2024 PlayStationMe.com. All rights reserved.</p>
+  </footer>
+</body>
+</html>
