--- a/IST322/Contact.copy.html
+++ b/IST322/Contact.copy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Contact PlayStationMe.com">
   <meta name="author" content="Your Name">
-  <title>Contact Us - PlayStationMe.com</title>
+  <title>Support - PlayStationMe.com</title>
   <link rel="stylesheet" href="styles.css">
     <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
@@ -18,19 +18,20 @@
 </head>
 <body>
   <header>
-    <h1>Contact Us</h1>
+    <h1>Support</h1>
     <nav>
       <ul>
         <li><a href="playstationmecopy.html">Home</a></li>
         <li><a href="Aboutcopy.html">About</a></li>
         <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
-        <li><a href="Contactcopy.html">Contact</a></li>
+        <li><a href="Contact.copy.html">Support</a></li>
+        <li><a href="checkout.html" class="checkout-button"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
-      <h2>Contact Information</h2>
+      <h2>Contact Us</h2>
       <p>Have questions or feedback? We'd love to hear from you! Feel free to reach out to us through the following channels:</p>
       <ul>
         <li>Email: contact@playstationme.com</li>
