--- a/IST322/playstationmecopy.html
+++ b/IST322/playstationmecopy.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
   <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale">
   <title>PlayStationMe.com - Find the Best PS5 Deals Now!</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -116,13 +116,14 @@
 </head>
 <body>
   <header>
-    <h1>We Have the Best PS5 Deals!</h1>
+    <h1>We Have the Best PS5 Deals!</h1> 
     <nav>
       <ul>
         <li><a href="playstationmecopy.html">Home</a></li>
         <li><a href="Aboutcopy.html">About</a></li>
         <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
-        <li><a href="Contactcopy.html">Contact</a></li>
+        <li><a href="Contact.copy.html">Support</a></li>
+        <li style="margin-right: 0;"><a href="checkout.html" class="checkout-button"><i class="fas fa-shopping-cart shopping-cart-icon"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -131,7 +132,11 @@
       <h2>Welcome to PlayStationMe.com!</h2>
       <p>Explore our unbeatable deals on the latest Sony PS5 consoles, bundles, and accessories.</p>
       <img src="../images/ps5black.jpg" alt="Sony PlayStation 5">
-      <a href="About.html" class="button">Shop Now</a>
+      <nav>
+        <ul>
+            <li><a href="Aboutcopy.html", href="landingpagecopy.html", href="Contact.copy.html" class="button">Shop Now</a></li>
+        </ul>
+      </nav>
     </section>
   </main>
   <footer>
