--- a/IST322/Contact.copy.html
+++ b/IST322/Contact.copy.html
@@ -1,20 +1,85 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--I decided to make my own site-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Contact PlayStationMe.com">
-  <meta name="author" content="Your Name">
-  <title>Support - PlayStationMe.com</title>
-  <link rel="stylesheet" href="styles.css">
-    <!-- Google tag (gtag.js) -->
+  <meta name="Contact PlayStationMe.com" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
+  <title>Support - PlayStationMe.com</title><!--This is where I enhanced my title tag-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous">
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-305657766-1');
   </script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f7f7f7;
+    }
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+    main {
+      padding: 20px;
+    }
+    section {
+      padding-bottom: 50px;
+      text-align: fixed;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+        .shopping-cart-icon {
+      font-size: 3em; /* Adjust the size as needed */
+      color: white;
+      position: fixed;
+      top: 20px;
+      right: 10px; /* Adjust the right distance from the corner */
+      z-index: 999;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .shopping-cart-icon:hover {
+      font-size: 3.5em; /* Increase font size on hover */
+    }
+  </style>
 </head>
 <body>
   <header>
