--- a/IST322/Contact.html
+++ b/IST322/Contact.html
@@ -44,3 +44,56 @@
   </footer>
 </body>
 </html>
+
+
+code copy 
+
+
+
+
+<!DOCTYPE html><!--I decided to make my own site-->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="Contact PlayStationMe.com" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
+  <title>Support - PlayStationMe.com</title><!--This is where I enhanced my title tag-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-305657766-1');
+  </script>
+</head>
+<body>
+  <header>
+    <h1>Support</h1>
+    <nav>
+      <ul>
+        <li><a href="playstationmecopy.html">Home</a></li>
+        <li><a href="Aboutcopy.html">About</a></li>
+        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
+        <li><a href="Contact.copy.html">Support</a></li>
+        <li><a href="checkout.html" class="checkout-button"><i class="fas fa-shopping-cart"></i></a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>Contact Us</h2>
+      <p>Have questions or feedback? We'd love to hear from you! Feel free to reach out to us through the following channels:</p>
+      <ul>
+        <li>Email: contact@playstationme.com</li>
+        <li>Phone: 1-800-PLAY-PS5</li>
+        <li>Address: 1234 Gaming Street, Cityville, State, Zip</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2024 PlayStationMe.com. All rights reserved.</p>
+  </footer>
+</body>
+</html>
