--- a/IST322/landingpage.html
+++ b/IST322/landingpage.html
@@ -48,3 +48,172 @@
 </footer>
 </body>
 </html>
+
+
+
+code copy 
+
+
+
+<!DOCTYPE html><!--I decided to make my own site-->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="Bundles & Deals at PlayStationMe.com" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
+  <title>Bundles & Deals - PlayStationMe.com</title><!--This is where I enhanced my title tag-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-305657766-1');
+  </script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+    main {
+      padding: 20px;
+      text-align: left;
+    }
+    section {
+      padding-bottom: 50px;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+    .ps5-listing {
+        display: flex;
+        align-items: center;
+    }
+    .ps5-details {
+        margin-left: 20px;
+        text-align: left;
+        flex: 1; /* This ensures that the .ps5-details div takes up the remaining space */
+    }
+    .ps5-details h3 {
+      margin-bottom: 10px;
+    }
+    .ps5-details p {
+        margin-bottom: 20px;
+    }
+    .ps5-details button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+      font-size: 16px;
+      display: block;
+      margin: 0 auto;
+    }
+    .ps5-details button:hover {
+      background-color: #0056b3;
+    }
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+    .shopping-cart-icon {
+    font-size: 24px;
+    color: white;
+    margin-left: 10px;
+    position: fixed; /* Set the position to fixed */
+    top: 40px; /* Adjust the top position as needed */
+    right: 30px; /* Adjust the right position as needed */
+    z-index: 999; /* Ensure the icon is on top of other elements */
+  }
+  @media only screen and (max-width: 600px)
+   {
+    header {
+      padding: 10px;
+    }
+    nav ul li {
+      margin-right: 10px;
+    }
+    main {
+      padding: 10px;
+    }
+    section {
+      padding-bottom: 20px;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    .button {
+      font-size: 14px;
+      padding: 8px 16px;
+    }
+    .shopping-cart-icon {
+      font-size: 20px;
+    }
+  }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Bundles & Deals</h1>
+    <nav>
+      <ul>
+        <li><a href="playstationmecopy.html">Home</a></li>
+        <li><a href="Aboutcopy.html">About</a></li>
+        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
+        <li><a href="Contact.copy.html">Support</a></li>
+        <li><a href="checkout.html" class="checkout-button"><i class="fas fa-shopping-cart"></i></a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>Bundles & Deals at PlayStationMe.com</h2>
+      <p>Shop PlaystationMe.com to find the latest greatest deal Limitted Time Offer!</p>
+      <h2>Featured Deals</h2>
+      <div class="ps5-listing">
+        <img src="../images/bundles.jpg" alt="Sony PlayStation 5" width="500">
+        <div class="ps5-details">
+          <h3>PS5 Console</h3>
+          <p>Experience next-gen gaming with the powerful PS5 console. Get it now at the best price!</p>
+          <button>Buy Now - $749.99</button>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2024 PlayStationMe.com. All rights reserved.</p>
+  </footer>
+</body>
+</html>
