--- a/IST322/playstationme.html
+++ b/IST322/playstationme.html
@@ -141,3 +141,167 @@
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+COPY CODE 
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale">
+  <title>PlayStationMe.com - Find the Best PS5 Deals Now!</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-305657766-1');
+  </script>
+  <style>
+        body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+
+    main {
+      padding: 20px;
+      text-align: center;
+    }
+
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
+    section {
+      padding-bottom: 50px;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+      font-size: 16px;
+    }
+
+    .button:hover {
+      background-color: #0056b3;
+    }
+
+    .shopping-cart-icon {
+      font-size: 24px;
+      color: #007bff;
+      margin-right: 10px;
+    }
+    @media only screen and (max-width: 600px)
+     {
+      header {
+        padding: 10px;
+      }
+      nav ul li {
+        margin-right: 10px;
+      }
+      main {
+        padding: 10px;
+      }
+      section {
+        padding-bottom: 20px;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+      .button {
+        font-size: 14px;
+        padding: 8px 16px;
+      }
+      .shopping-cart-icon {
+        font-size: 20px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <!-- Shopping cart icon -->
+  <a href="checkout.html" class="shopping-cart-icon"><i class="fas fa-shopping-cart"></i></a>
+  <header>
+    <h1>We Have the Best PS5 Deals!</h1> 
+    <nav>
+      <ul>
+        <li><a href="playstationmecopy.html">Home</a></li>
+        <li><a href="Aboutcopy.html">About</a></li>
+        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
+        <li><a href="Contact.copy.html">Support</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>Welcome to PlayStationMe.com!</h2>
+      <p>Explore our unbeatable deals on the latest Sony PS5 consoles, bundles, and accessories.</p>
+      <img src="../images/ps5black.jpg" alt="Sony PlayStation 5">
+      <nav>
+        <ul>
+          <li><a href="Aboutcopy.html", href="landingpagecopy.html", href="Contact.copy.html" class="button">Shop Now</a></li>
+        </ul>
+      </nav>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2024 PlayStationMe.com. All rights reserved.</p>
+  </footer>
+  <script>
+    // JavaScript code for shopping cart functionality (if needed)
+  </script>
+</body>
+</html>
+
+  
