--- a/IST322/Aboutcopy.html
+++ b/IST322/Aboutcopy.html
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--I decided to make my own site-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="About PlayStationMe.com" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
-    <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale">
-    <title>About- PlayStationMe.com</title>
+    <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
+    <title>About- PlayStationMe.com</title><!--This is where I enhanced my title tag-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous">
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-305657766-1');
+    </script>
     <style>
-        /* Your CSS styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -72,17 +79,17 @@
         .shopping-cart-icon {
             font-size: 24px;
             color: white;
-            margin-left: 10px; /* Adjust the margin as needed */
+            margin-left: 10px; 
             position: fixed;
             top: 40px;
             right: 30px;
-            z-index: 999; /* Ensure the icon is on top of other elements */
-            cursor: pointer; /* Add cursor pointer to indicate it's clickable */
-            transition: all 0.3s ease; /* Add smooth transition for movement and size changes */
+            z-index: 999;
+            cursor: pointer; 
+            transition: all 0.3s ease; 
         }
 
         .shopping-cart-icon:hover {
-            font-size: 30px; /* Increase font size on hover */
+            font-size: 30px; 
         }
 
         @media only screen and (max-width: 600px) 
