--- a/IST322/Contact.copy.html
+++ b/IST322/Contact.copy.html
@@ -66,18 +66,18 @@
       width: 100%;
     }
         .shopping-cart-icon {
-      font-size: 3em; /* Adjust the size as needed */
+      font-size: 3em; 
       color: white;
       position: fixed;
       top: 20px;
-      right: 10px; /* Adjust the right distance from the corner */
+      right: 10px; 
       z-index: 999;
       cursor: pointer;
       transition: all 0.3s ease;
     }
 
     .shopping-cart-icon:hover {
-      font-size: 3.5em; /* Increase font size on hover */
+      font-size: 3.5em; 
     }
   </style>
 </head>
