--- a/IST322/landingpagecopy.html
+++ b/IST322/landingpagecopy.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--I decided to make my own site-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="Bundles & Deals at PlayStationMe.com" content="Find the best deals on Sony PS5, PS5 bundles, and PS5 deals at PlayStationMe.com. We offer the best prices on PS5 consoles and accessories.">
-  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale">
-  <title>Bundles & Deals - PlayStationMe.com</title>
+  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
+  <title>Bundles & Deals - PlayStationMe.com</title><!--This is where I enhanced my title tag-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-305657766-1');
+    </script>
   <style>
     body {
       font-family: Arial, sans-serif;
