--- a/IST322/Contact.html
+++ b/IST322/Contact.html
@@ -1,56 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Contact PlayStationMe.com">
-  <meta name="keywords" content="Sony PS5, PS5 near me, PS5 bundles, PS5 deals, PS5 for sale"><!--Here is where i optimized the meta tag-->
-  <title>Contact Us - PlayStationMe.com</title>
-  <link rel="stylesheet" href="styles.css">
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-305657766-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-305657766-1');
-  </script>
-</head>
-<body>
-  <header>
-    <h1>Contact Us</h1>
-    <nav>
-      <ul>
-        <li><a href="playstationme.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="landingpage.html"></a></li>
-        <li><a href="Contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h2>Contact Information</h2>
-      <p>Have questions or feedback? We'd love to hear from you! Feel free to reach out to us through the following channels:</p>
-      <ul>
-        <li>Email: contact@playstationme.com</li>
-        <li>Phone: 1-800-PLAY-PS5</li>
-        <li>Address: 1234 Gaming Street, Cityville, State, Zip</li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 PlayStationMe.com. All rights reserved.</p>
-  </footer>
-</body>
-</html>
-
-
-code copy 
-
-
-
-
 <!DOCTYPE html><!--I decided to make my own site-->
 <html lang="en">
 <head>
@@ -67,16 +14,82 @@ code copy
     gtag('js', new Date());
     gtag('config', 'UA-305657766-1');
   </script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f7f7f7;
+    }
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+    }
+    main {
+      padding: 20px;
+    }
+    section {
+      padding-bottom: 50px;
+      text-align: fixed;
+    }
+    h1 {
+      margin-top: 0;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+        .shopping-cart-icon {
+      font-size: 3em; 
+      color: white;
+      position: fixed;
+      top: 20px;
+      right: 10px; 
+      z-index: 999;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .shopping-cart-icon:hover {
+      font-size: 3.5em; 
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Support</h1>
     <nav>
       <ul>
-        <li><a href="playstationmecopy.html">Home</a></li>
-        <li><a href="Aboutcopy.html">About</a></li>
-        <li><a href="landingpagecopy.html">Bundles & Deals</a></li>
-        <li><a href="Contact.copy.html">Support</a></li>
+        <li><a href="playstationme.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="landingpage.html">Bundles & Deals</a></li>
+        <li><a href="Contact.html">Support</a></li>
         <li><a href="checkout.html" class="checkout-button"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
