--- a/IST322/playstationmecopy.html
+++ b/IST322/playstationmecopy.html
@@ -86,10 +86,10 @@
       font-size: 24px;
       color: white;
       margin-left: 10px;
-      position: fixed; /* Set the position to fixed */
+      position: fixed;
       top: 40px; /* Adjust the top position as needed */
       right: 30px; /* Adjust the right position as needed */
-      z-index: 999; /* Ensure the icon is on top of other elements */
+      z-index: 999;
     }
     @media only screen and (max-width: 600px)
      {
@@ -116,6 +116,35 @@
       .shopping-cart-icon {
         font-size: 20px;
       }
+      .search-bar {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .search-input {
+      width: 300px;
+      padding: 10px;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    .search-button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    .search-button:hover {
+      background-color: #0056b3;
+    }
     }
   </style>
 </head>
